--- a/css/style.css
+++ b/css/style.css
@@ -1,45 +1,35 @@
 header {
   background: red;
-  height: 100vh;
-}
+  height: 100vh; }
 
 .footer_container {
   width: 90%;
-  max-width: 1550px;
-}
-.footer_container .footer_logo h2 {
-  color: #333333;
-  font-family: "Lato - Black";
-  font-size: 67px;
-  font-weight: 400;
-}
-.footer_container .footer_logo h2 span {
-  color: #ff0000;
-}
-.footer_container .footer_logo p {
-  color: #333333;
-  font-family: "Lato - Thin";
-  font-size: 17px;
-  font-weight: 400;
-}
-.footer_container .footer_logo .footer_icons {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-.footer_container .footer_logo .footer_icons i {
-  display: block;
-  width: 50px;
-  height: 50px;
-  border-radius: 25px;
-  background-color: #333333;
-  color: #fff;
-  font-size: 30px;
-}
-.footer_container .footer_logo .footer_icons i::before {
-  margin-left: 15px;
-  display: block;
-  padding-top: 10px;
-}
+  max-width: 1550px; }
+  .footer_container .footer_logo h2 {
+    color: #333333;
+    font-family: "Lato - Black";
+    font-size: 67px;
+    font-weight: 400; }
+    .footer_container .footer_logo h2 span {
+      color: #ff0000; }
+  .footer_container .footer_logo p {
+    color: #333333;
+    font-family: "Lato - Thin";
+    font-size: 17px;
+    font-weight: 400; }
+  .footer_container .footer_logo .footer_icons {
+    display: flex; }
+    .footer_container .footer_logo .footer_icons i {
+      display: block;
+      width: 50px;
+      height: 50px;
+      border-radius: 25px;
+      background-color: #333333;
+      color: #fff;
+      font-size: 30px; }
+    .footer_container .footer_logo .footer_icons i::before {
+      margin-left: 15px;
+      display: block;
+      padding-top: 10px; }
 
 /*# sourceMappingURL=style.css.map */
