--- a/css/style.css
+++ b/css/style.css
@@ -60,41 +60,48 @@ header {
     text-align: center; }
 
 .footer_container {
+  padding-top: 75px;
   width: 90%;
   max-width: 1550px;
   justify-content: space-around;
   flex-wrap: wrap;
   margin: 0 auto;
-  display: flex; }
+  display: flex;
+  line-height: 1.35; }
   .footer_container .footer_logo {
-    width: 25%; }
+    width: 25%;
+    line-height: 1; }
     .footer_container .footer_logo h2 {
       color: #333333;
       font-family: "Lato - Black";
       font-size: 67px;
-      font-weight: 400; }
+      font-weight: 400;
+      margin-bottom: 23px; }
       .footer_container .footer_logo h2 span {
         color: #ff0000; }
     .footer_container .footer_logo p {
       color: #333333;
       font-family: "Lato - Thin";
       font-size: 17px;
-      font-weight: 400; }
+      font-weight: 400;
+      margin-bottom: 23px; }
     .footer_container .footer_logo .footer_icons {
       display: flex; }
-      .footer_container .footer_logo .footer_icons i {
-        display: block;
-        min-width: 50px;
-        height: 50px;
-        border-radius: 25px;
-        background-color: #333333;
-        color: #fff;
-        font-size: 30px;
-        margin-right: 20px; }
-      .footer_container .footer_logo .footer_icons i::before {
-        margin-left: 15px;
-        display: block;
-        padding-top: 10px; }
+      .footer_container .footer_logo .footer_icons a {
+        text-decoration: none; }
+        .footer_container .footer_logo .footer_icons a i {
+          display: block;
+          min-width: 50px;
+          height: 50px;
+          border-radius: 25px;
+          background-color: #333333;
+          color: #fff;
+          font-size: 30px;
+          margin-right: 20px; }
+        .footer_container .footer_logo .footer_icons a i::before {
+          margin-left: 16px;
+          display: block;
+          padding-top: 10px; }
   .footer_container .footer_text {
     width: 25%;
     color: #333333;
@@ -121,5 +128,13 @@ header {
         font-size: 42px;
         font-weight: 400;
         margin-right: 70px; }
+
+.revies .revies_container .slider {
+  width: 70%; }
+  .revies .revies_container .slider .slider_content {
+    margin: 0 50px; }
+    .revies .revies_container .slider .slider_content img {
+      width: 728px;
+      height: 541px; }
 
 /*# sourceMappingURL=style.css.map */
