--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,10 +1,10 @@
-@font-face 
+@font-face
 	font-family: "LatoRegular"
 	src: url("../fonts/LatoRegular.eot")
 	src: url("../fonts/LatoRegular.eot?#iefix")format("embedded-opentype"), url("../fonts/LatoRegular.woff") format("woff"), url("../fonts/LatoRegular.ttf") format("truetype")
 	font-style: normal
 	font-weight: normal
-@font-face 
+@font-face
 	font-family: "LatoBold"
 	src: url("../fonts/LatoBold.eot")
 	src: url("../fonts/LatoBold.eot?#iefix")format("embedded-opentype"), url("../fonts/LatoBold.woff") format("woff"), url("../fonts/LatoBold.ttf") format("truetype")
@@ -34,8 +34,8 @@ header
 			color: #303030
 			text-decoration: none
 			font-size: 4.2rem
-			
-			
+
+
 			span
 				color: #d22222
 
@@ -46,7 +46,7 @@ header
 				li
 					float: left
 					font-size: 3.7rem
-					margin-left: 15px	
+					margin-left: 15px
 					a
 						color: #333333
 						font-family: "LatoRegular", sans-serif
@@ -61,23 +61,27 @@ header
 		font-weight: 300
 	h1
 		text-align: center
-		
-						
+
+
 
 .footer_container
+	padding-top: 75px
 	width: 90%
 	max-width: 1550px
 	justify-content: space-around
 	flex-wrap: wrap
 	margin: 0 auto
 	display: flex
+	line-height: 1.35
 	.footer_logo
 		width: 25%
+		line-height: 1
 		h2
 			color: #333333
 			font-family: "Lato - Black"
 			font-size: 67px
 			font-weight: 400
+			margin-bottom: 23px
 			span
 				color: #ff0000
 		p
@@ -85,21 +89,24 @@ header
 			font-family: "Lato - Thin"
 			font-size: 17px
 			font-weight: 400
+			margin-bottom: 23px
 		.footer_icons
 			display: flex
-			i
-				display: block
-				min-width: 50px
-				height: 50px
-				border-radius: 25px
-				background-color: #333333
-				color: #fff
-				font-size: 30px
-				margin-right: 20px
-			i::before
-				margin-left: 15px
-				display: block
-				padding-top: 10px
+			a
+				text-decoration: none
+				i
+					display: block
+					min-width: 50px
+					height: 50px
+					border-radius: 25px
+					background-color: #333333
+					color: #fff
+					font-size: 30px
+					margin-right: 20px
+				i::before
+					margin-left: 16px
+					display: block
+					padding-top: 10px
 	.footer_text
 		width: 25%
 		color: #333333
@@ -126,3 +133,12 @@ header
 					font-size: 42px
 					font-weight: 400
 					margin-right: 70px
+.revies
+	.revies_container
+		.slider
+			width: 70%
+			.slider_content
+				margin: 0 50px
+				img
+					width: 728px
+					height: 541px
