--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,7 +1,23 @@
 
 header
-	background: red
-	height: 100vh
+	background: #f0f0f0
+	.container_head
+		width: 90%
+		max-width: 1520px
+		margin: 0 auto
+	.top_line
+		display: flex
+		justify-content: space-between
+		.logo
+			display: block
+		nav
+			ul
+				margin: 0
+				padding: 0
+				li
+					float: left
+					
+			
 
 .footer_container
 	width: 90%
