--- a/css/style.css
+++ b/css/style.css
@@ -1,48 +1,119 @@
+@font-face {
+  font-family: "LatoRegular";
+  src: url("../fonts/LatoRegular.eot");
+  src: url("../fonts/LatoRegular.eot?#iefix") format("embedded-opentype"), url("../fonts/LatoRegular.woff") format("woff"), url("../fonts/LatoRegular.ttf") format("truetype");
+  font-style: normal;
+  font-weight: normal;
+}
+@font-face {
+  font-family: "LatoBold";
+  src: url("../fonts/LatoBold.eot");
+  src: url("../fonts/LatoBold.eot?#iefix") format("embedded-opentype"), url("../fonts/LatoBold.woff") format("woff"), url("../fonts/LatoBold.ttf") format("truetype");
+  font-style: normal;
+  font-weight: normal;
+}
+html {
+  font-size: 10px;
+}
+
+.clearfix::after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
 header {
-  background: #f0f0f0; }
-  header .container_head {
-    width: 90%;
-    max-width: 1520px;
-    margin: 0 auto; }
-  header .top_line {
-    display: flex;
-    justify-content: space-between; }
-    header .top_line .logo {
-      display: block; }
-    header .top_line nav ul {
-      margin: 0;
-      padding: 0; }
-      header .top_line nav ul li {
-        float: left; }
+  background: url(../img/bg-white.png) no-repeat 50% 50%/cover;
+}
+header .container_head {
+  width: 90%;
+  max-width: 1520px;
+  margin: 0 auto;
+}
+header .top_line {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  padding-top: 35px;
+}
+header .top_line .logo {
+  display: block;
+  font-family: "Lato", sans-serif;
+  font-weight: 900;
+  color: #303030;
+  text-decoration: none;
+  font-size: 4.2rem;
+}
+header .top_line .logo span {
+  color: #d22222;
+}
+header .top_line nav ul {
+  margin: 0;
+  padding: 0;
+}
+header .top_line nav ul li {
+  float: left;
+  font-size: 3.7rem;
+  margin-left: 15px;
+}
+header .top_line nav ul li a {
+  color: #333333;
+  font-family: "LatoRegular", sans-serif;
+  font-size: 3.7rem;
+  text-decoration: none;
+  padding-right: 10px;
+}
+header h3 {
+  text-align: center;
+  color: #333333;
+  font-size: 5rem;
+  font-family: "Lato", sans-serif;
+  font-weight: 300;
+}
+header h1 {
+  text-align: center;
+}
 
 .footer_container {
   width: 90%;
-  max-width: 1550px; }
-  .footer_container .footer_logo h2 {
-    color: #333333;
-    font-family: "Lato - Black";
-    font-size: 67px;
-    font-weight: 400; }
-    .footer_container .footer_logo h2 span {
-      color: #ff0000; }
-  .footer_container .footer_logo p {
-    color: #333333;
-    font-family: "Lato - Thin";
-    font-size: 17px;
-    font-weight: 400; }
-  .footer_container .footer_logo .footer_icons {
-    display: flex; }
-    .footer_container .footer_logo .footer_icons i {
-      display: block;
-      width: 50px;
-      height: 50px;
-      border-radius: 25px;
-      background-color: #333333;
-      color: #fff;
-      font-size: 30px; }
-    .footer_container .footer_logo .footer_icons i::before {
-      margin-left: 15px;
-      display: block;
-      padding-top: 10px; }
+  max-width: 1550px;
+}
+.footer_container .footer_logo h2 {
+  color: #333333;
+  font-family: "Lato - Black";
+  font-size: 67px;
+  font-weight: 400;
+}
+.footer_container .footer_logo h2 span {
+  color: #ff0000;
+}
+.footer_container .footer_logo p {
+  color: #333333;
+  font-family: "Lato - Thin";
+  font-size: 17px;
+  font-weight: 400;
+}
+.footer_container .footer_logo .footer_icons {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+.footer_container .footer_logo .footer_icons i {
+  display: block;
+  width: 50px;
+  height: 50px;
+  border-radius: 25px;
+  background-color: #333333;
+  color: #fff;
+  font-size: 30px;
+}
+.footer_container .footer_logo .footer_icons i::before {
+  margin-left: 15px;
+  display: block;
+  padding-top: 10px;
+}
 
 /*# sourceMappingURL=style.css.map */
