--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,5 +1,24 @@
+@font-face 
+	font-family: "LatoRegular"
+	src: url("../fonts/LatoRegular.eot")
+	src: url("../fonts/LatoRegular.eot?#iefix")format("embedded-opentype"), url("../fonts/LatoRegular.woff") format("woff"), url("../fonts/LatoRegular.ttf") format("truetype")
+	font-style: normal
+	font-weight: normal
+@font-face 
+	font-family: "LatoBold"
+	src: url("../fonts/LatoBold.eot")
+	src: url("../fonts/LatoBold.eot?#iefix")format("embedded-opentype"), url("../fonts/LatoBold.woff") format("woff"), url("../fonts/LatoBold.ttf") format("truetype")
+	font-style: normal
+	font-weight: normal
+html
+	font-size: 10px
+.clearfix::after
+	content: ""
+	display: table
+	clear: both
+
 header
-	background: #f0f0f0
+	background: url(../img/bg-white.png) no-repeat 50% 50%/cover
 	.container_head
 		width: 90%
 		max-width: 1520px
@@ -7,14 +26,44 @@ header
 	.top_line
 		display: flex
 		justify-content: space-between
+		padding-top: 35px
 		.logo
 			display: block
+			font-family: 'Lato', sans-serif
+			font-weight: 900
+			color: #303030
+			text-decoration: none
+			font-size: 4.2rem
+			
+			
+			span
+				color: #d22222
+
 		nav
 			ul
 				margin: 0
 				padding: 0
 				li
 					float: left
+					font-size: 3.7rem
+					margin-left: 15px	
+					a
+						color: #333333
+						font-family: "LatoRegular", sans-serif
+						font-size: 3.7rem
+						text-decoration: none
+						padding-right: 10px
+	h3
+		text-align: center
+		color: #333333
+		font-size: 5rem
+		font-family: 'Lato', sans-serif
+		font-weight: 300
+	h1
+		text-align: center
+		
+						
+
 .footer_container
 	width: 90%
 	max-width: 1550px
