--- a/css/style.css
+++ b/css/style.css
@@ -4,14 +4,17 @@
   src: url("../fonts/LatoRegular.eot?#iefix") format("embedded-opentype"), url("../fonts/LatoRegular.woff") format("woff"), url("../fonts/LatoRegular.ttf") format("truetype");
   font-style: normal;
   font-weight: normal; }
+
 @font-face {
   font-family: "LatoBold";
   src: url("../fonts/LatoBold.eot");
   src: url("../fonts/LatoBold.eot?#iefix") format("embedded-opentype"), url("../fonts/LatoBold.woff") format("woff"), url("../fonts/LatoBold.ttf") format("truetype");
   font-style: normal;
   font-weight: normal; }
+
 html {
-  font-size: 10px; }
+  font-size: 10px;
+  overflow-x: hidden; }
 
 .clearfix::after {
   content: "";
@@ -25,12 +28,16 @@ header {
     max-width: 1520px;
     margin: 0 auto; }
   header .top_line {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
     justify-content: space-between;
     padding-top: 35px; }
     header .top_line .logo {
       display: block;
-      font-family: "Lato", sans-serif;
+      font-family: 'Lato', sans-serif;
       font-weight: 900;
       color: #303030;
       text-decoration: none;
@@ -54,7 +61,7 @@ header {
     text-align: center;
     color: #333333;
     font-size: 5rem;
-    font-family: "Lato", sans-serif;
+    font-family: 'Lato', sans-serif;
     font-weight: 300; }
   header h1 {
     text-align: center; }
@@ -63,9 +70,13 @@ header {
   padding-top: 75px;
   width: 90%;
   max-width: 1550px;
+  -ms-flex-pack: distribute;
   justify-content: space-around;
+  -ms-flex-wrap: wrap;
   flex-wrap: wrap;
   margin: 0 auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   line-height: 1.35; }
   .footer_container .footer_logo {
@@ -86,6 +97,8 @@ header {
       font-weight: 400;
       margin-bottom: 23px; }
     .footer_container .footer_logo .footer_icons {
+      display: -webkit-box;
+      display: -ms-flexbox;
       display: flex; }
       .footer_container .footer_logo .footer_icons a {
         text-decoration: none; }
@@ -129,12 +142,71 @@ header {
         font-weight: 400;
         margin-right: 70px; }
 
-.revies .revies_container .slider {
-  width: 70%; }
-  .revies .revies_container .slider .slider_content {
-    margin: 0 50px; }
-    .revies .revies_container .slider .slider_content img {
-      width: 728px;
-      height: 541px; }
+.revies .revies_container {
+  position: relative; }
+  .revies .revies_container .revies_text {
+    position: absolute;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -ms-flex-pack: distribute;
+    justify-content: space-around;
+    padding-left: 50px;
+    width: 600px;
+    top: 0%;
+    left: 0%;
+    height: 100%;
+    z-index: 99999999999;
+    background-color: #333333;
+    -webkit-clip-path: polygon(0 0, 35% 0, 100% 100%, 0 100%);
+    clip-path: polygon(0 0, 35% 0, 100% 100%, 0 100%); }
+    .revies .revies_container .revies_text .revies_text_title {
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-align: center;
+      -ms-flex-align: center;
+      align-items: center; }
+      .revies .revies_container .revies_text .revies_text_title h2 {
+        color: #ffffff;
+        font-family: "Lato - Black";
+        font-size: 75px;
+        font-weight: 400;
+        position: relative; }
+      .revies .revies_container .revies_text .revies_text_title .red_line {
+        width: 130px;
+        height: 3px;
+        background-color: #d22222;
+        margin-top: 15px;
+        z-index: 9999999999; }
+    .revies .revies_container .revies_text p {
+      color: #ffffff;
+      font-family: "Lato - Black";
+      font-size: 42px;
+      font-weight: 400; }
+  .revies .revies_container .slider {
+    padding: 60px 0;
+    width: 85%;
+    margin-left: auto; }
+    .revies .revies_container .slider .slider_content {
+      position: relative; }
+      .revies .revies_container .slider .slider_content img {
+        width: 728px;
+        height: 541px; }
+      .revies .revies_container .slider .slider_content .slider_content_absolute {
+        position: absolute;
+        top: 0%;
+        left: 0%;
+        height: 100%;
+        width: 100%;
+        background-color: rgba(0, 0, 0, 0.35); }
 
-/*# sourceMappingURL=style.css.map */
+.slick-active .slider_content .slider_content_absolute {
+  display: none; }
+
+.slick-slide {
+  margin: 0 50px; }
