--- a/css/style.css
+++ b/css/style.css
@@ -67,6 +67,7 @@ header {
     text-align: center; }
 
 .footer_container {
+  padding-bottom: 20px;
   padding-top: 75px;
   width: 90%;
   max-width: 1550px;
@@ -142,71 +143,169 @@ header {
         font-weight: 400;
         margin-right: 70px; }
 
-.revies .revies_container {
-  position: relative; }
-  .revies .revies_container .revies_text {
-    position: absolute;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: column;
-    flex-direction: column;
-    -ms-flex-pack: distribute;
-    justify-content: space-around;
-    padding-left: 50px;
-    width: 600px;
-    top: 0%;
-    left: 0%;
-    height: 100%;
-    z-index: 99999999999;
-    background-color: #333333;
-    -webkit-clip-path: polygon(0 0, 35% 0, 100% 100%, 0 100%);
-    clip-path: polygon(0 0, 35% 0, 100% 100%, 0 100%); }
-    .revies .revies_container .revies_text .revies_text_title {
+.revies {
+  display: none; }
+  .revies .revies_container {
+    position: relative; }
+    .revies .revies_container .revies_text {
+      position: absolute;
       display: -webkit-box;
       display: -ms-flexbox;
       display: flex;
-      -webkit-box-align: center;
-      -ms-flex-align: center;
-      align-items: center; }
-      .revies .revies_container .revies_text .revies_text_title h2 {
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+      flex-direction: column;
+      -ms-flex-pack: distribute;
+      justify-content: space-around;
+      padding-left: 50px;
+      width: 600px;
+      top: 0%;
+      left: 0%;
+      height: 100%;
+      z-index: 99999999999;
+      background-color: #333333;
+      -webkit-clip-path: polygon(0 0, 35% 0, 100% 100%, 0 100%);
+      clip-path: polygon(0 0, 35% 0, 100% 100%, 0 100%); }
+      .revies .revies_container .revies_text .revies_text_title {
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-align: center;
+        -ms-flex-align: center;
+        align-items: center; }
+        .revies .revies_container .revies_text .revies_text_title h2 {
+          color: #ffffff;
+          font-family: "Lato - Black";
+          font-size: 75px;
+          font-weight: 400;
+          position: relative; }
+        .revies .revies_container .revies_text .revies_text_title .red_line {
+          width: 130px;
+          height: 3px;
+          background-color: #d22222;
+          margin-top: 15px;
+          z-index: 9999999999; }
+      .revies .revies_container .revies_text p {
         color: #ffffff;
         font-family: "Lato - Black";
-        font-size: 75px;
-        font-weight: 400;
+        font-size: 42px;
+        font-weight: 400; }
+    .revies .revies_container .slider {
+      padding: 60px 0;
+      width: 85%;
+      margin-left: auto; }
+      .revies .revies_container .slider .slider_content {
         position: relative; }
-      .revies .revies_container .revies_text .revies_text_title .red_line {
-        width: 130px;
-        height: 3px;
-        background-color: #d22222;
-        margin-top: 15px;
-        z-index: 9999999999; }
-    .revies .revies_container .revies_text p {
-      color: #ffffff;
-      font-family: "Lato - Black";
-      font-size: 42px;
-      font-weight: 400; }
-  .revies .revies_container .slider {
-    padding: 60px 0;
-    width: 85%;
-    margin-left: auto; }
-    .revies .revies_container .slider .slider_content {
-      position: relative; }
-      .revies .revies_container .slider .slider_content img {
-        width: 728px;
-        height: 541px; }
-      .revies .revies_container .slider .slider_content .slider_content_absolute {
-        position: absolute;
-        top: 0%;
-        left: 0%;
-        height: 100%;
-        width: 100%;
-        background-color: rgba(0, 0, 0, 0.35); }
+        .revies .revies_container .slider .slider_content img {
+          width: 728px;
+          height: 541px; }
+        .revies .revies_container .slider .slider_content .slider_content_absolute {
+          position: absolute;
+          top: 0%;
+          left: 0%;
+          height: 100%;
+          width: 100%;
+          background-color: rgba(0, 0, 0, 0.35); }
 
 .slick-active .slider_content .slider_content_absolute {
   display: none; }
 
 .slick-slide {
   margin: 0 50px; }
+
+.feedback {
+  background-image: url(../img/casino.png);
+  background-position: 7% 0%; }
+  .feedback .feedback_container {
+    width: 90%;
+    max-width: 1520px;
+    margin: 0 auto; }
+    .feedback .feedback_container h2 {
+      color: #333333;
+      font-family: "Lato - Black";
+      font-size: 75px;
+      font-weight: 400;
+      margin-bottom: 70px; }
+    .feedback .feedback_container .red_line {
+      width: 130px;
+      height: 3px;
+      background-color: #d22222;
+      margin-bottom: 50px; }
+    .feedback .feedback_container p {
+      color: #535353;
+      font-family: Lato;
+      font-size: 37px;
+      font-weight: 400;
+      line-height: 50px;
+      margin-bottom: 110px; }
+    .feedback .feedback_container .feedback_form label {
+      color: #333333;
+      font-family: "Lato - Black";
+      font-size: 37px;
+      font-weight: 400;
+      line-height: 50px;
+      display: block;
+      margin-bottom: 30px; }
+    .feedback .feedback_container .feedback_form input {
+      width: 600px;
+      height: 59px;
+      border-radius: 20px;
+      border: 2px solid #929292;
+      margin-bottom: 90px;
+      padding-left: 20px;
+      outline: none; }
+    .feedback .feedback_container .feedback_form input[type=submit] {
+      width: 314px;
+      height: 64px;
+      border: none;
+      border-radius: 20px;
+      color: #ffffff;
+      background-color: #ff0000;
+      border: 2px solid #ff0000;
+      font-family: "Lato - Black";
+      font-size: 37px;
+      font-weight: 400;
+      line-height: 50px;
+      cursor: pointer;
+      margin-bottom: 50px; }
+    .feedback .feedback_container .feedback_form input[type=submit]:hover {
+      color: #ff0000;
+      background-color: #ffffff; }
+    .feedback .feedback_container .feedback_form .choose_sex {
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex; }
+      .feedback .feedback_container .feedback_form .choose_sex .sex {
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-pack: center;
+        -ms-flex-pack: center;
+        justify-content: center;
+        -webkit-box-align: center;
+        -ms-flex-align: center;
+        align-items: center;
+        width: 113px;
+        height: 59px;
+        border-radius: 20px;
+        background-color: #ffffff;
+        border: 2px solid #ff0000;
+        color: #ff0000;
+        font-family: "Lato - Black";
+        font-size: 42px;
+        font-weight: 400;
+        line-height: 50px;
+        margin-left: 30px;
+        cursor: pointer;
+        margin-bottom: 90px; }
+      .feedback .feedback_container .feedback_form .choose_sex .active {
+        background-color: #ff0000;
+        color: #ffffff; }
+      .feedback .feedback_container .feedback_form .choose_sex .sex:hover {
+        background-color: #ff0000;
+        color: #ffffff; }
+
+@media all and (max-width: 1400px) {
+  body {
+    display: none; } }
