--- a/sass/style.sass
+++ b/sass/style.sass
@@ -66,6 +66,7 @@ header
 
 
 .footer_container
+	padding-bottom: 20px
 	padding-top: 75px
 	width: 90%
 	max-width: 1550px
@@ -135,6 +136,7 @@ header
 					font-weight: 400
 					margin-right: 70px
 .revies
+	display: none
 	.revies_container
 		position: relative
 		.revies_text
@@ -193,3 +195,91 @@ header
 	display: none
 .slick-slide
 	margin: 0 50px
+.feedback
+	background-image: url(../img/casino.png)
+	background-position: 7% 0%
+	.feedback_container
+		width: 90%
+		max-width: 1520px
+		margin: 0 auto
+		h2
+			color: #333333
+			font-family: "Lato - Black"
+			font-size: 75px
+			font-weight: 400
+			margin-bottom: 70px
+		.red_line
+			width: 130px
+			height: 3px
+			background-color: #d22222
+			margin-bottom: 50px
+		p
+			color: #535353
+			font-family: Lato
+			font-size: 37px
+			font-weight: 400
+			line-height: 50px
+			margin-bottom: 110px
+		.feedback_form
+			label
+				color: #333333
+				font-family: "Lato - Black"
+				font-size: 37px
+				font-weight: 400
+				line-height: 50px
+				display: block
+				margin-bottom: 30px
+			input
+				width: 600px
+				height: 59px
+				border-radius: 20px
+				border: 2px solid #929292
+				margin-bottom: 90px
+				padding-left: 20px
+				outline: none
+			input[type=submit]
+				width: 314px
+				height: 64px
+				border: none
+				border-radius: 20px
+				color: #ffffff
+				background-color: #ff0000
+				border: 2px solid #ff0000
+				font-family: "Lato - Black"
+				font-size: 37px
+				font-weight: 400
+				line-height: 50px
+				cursor: pointer
+				margin-bottom: 50px
+			input[type=submit]:hover
+				color: #ff0000
+				background-color: #ffffff
+			.choose_sex
+				display: flex
+				.sex
+					display: flex
+					justify-content: center
+					align-items: center
+					width: 113px
+					height: 59px
+					border-radius: 20px
+					background-color: #ffffff
+					border: 2px solid #ff0000
+					color: #ff0000
+					font-family: "Lato - Black"
+					font-size: 42px
+					font-weight: 400
+					line-height: 50px
+					margin-left: 30px
+					cursor: pointer
+					margin-bottom: 90px
+
+				.active
+					background-color: #ff0000
+					color: #ffffff
+				.sex:hover
+					background-color: #ff0000
+					color: #ffffff
+@media all and (max-width:1400px)
+	body
+		display: none
