--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,17 @@
   font-style: normal;
   font-weight: normal;
 }
+@font-face {
+  font-family: "LatoLight";
+  src: url("../fonts/LatoLight.eot");
+  src: url("../fonts/LatoLight.eot?#iefix") format("embedded-opentype"), url("../fonts/LatoLight.woff") format("woff"), url("../fonts/LatoLight.ttf") format("truetype");
+  font-style: normal;
+  font-weight: normal;
+}
+img {
+  max-width: 100%;
+}
+
 html {
   font-size: 10px;
 }
@@ -38,6 +49,7 @@ header .top_line {
       -ms-flex-pack: justify;
           justify-content: space-between;
   padding-top: 35px;
+  margin-bottom: 175px;
 }
 header .top_line .logo {
   display: block;
@@ -70,11 +82,160 @@ header h3 {
   text-align: center;
   color: #333333;
   font-size: 5rem;
-  font-family: "Lato", sans-serif;
-  font-weight: 300;
+  font-family: "LatoLight", sans-serif;
+  margin-bottom: 25px;
+}
+header h3 span {
+  font-weight: 900;
 }
 header h1 {
   text-align: center;
+  font-size: 22rem;
+  padding: 0;
+  margin: 0;
+  font-family: "Lato", sans-serif;
+  font-weight: 900;
+  letter-spacing: -25px;
+  color: #333;
+  line-height: 170px;
+}
+
+#black_sec {
+  background: url(../img/bg-black.png) no-repeat 50% 50%/cover;
+  padding: 50px 0px;
+  position: relative;
+  padding-bottom: 140px;
+}
+#black_sec .container_black {
+  width: 90%;
+  max-width: 1520px;
+  margin: 0 auto;
+}
+#black_sec .offer_black {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+#black_sec .offer_black .black_img {
+  margin-right: 60px;
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+#black_sec .offer_black .black_img img {
+  margin-top: -85px;
+}
+#black_sec .offer_black .black_info {
+  font-size: 2.9rem;
+  color: #fff;
+  font-family: "Lato", sans-serif;
+  font-weight: 400;
+}
+#black_sec .offer_black .black_info p {
+  margin-bottom: 35px;
+  line-height: 35px;
+  width: 435px;
+}
+#black_sec .offer_black .black_info p span {
+  color: #d22222;
+}
+#black_sec .big__black_abs {
+  padding: 25px 0px;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  -webkit-box-shadow: 0 0 90px 46px rgba(0, 0, 0, 0.35);
+          box-shadow: 0 0 90px 46px rgba(0, 0, 0, 0.35);
+  background: url(../img/bg-black.png) repeat 50% 50%;
+}
+#black_sec .big__black_abs .black_list {
+  width: 90%;
+  max-width: 1520px;
+  margin: 0 auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+#black_sec .big__black_abs .black_list .econom_cash {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+#black_sec .big__black_abs .black_list .econom_cash:after {
+  content: "";
+  height: 70px;
+  width: 1px;
+  background: #d22222;
+  margin-left: 30px;
+}
+#black_sec .big__black_abs .black_list .econom_cash p {
+  font-size: 3.3rem;
+  color: #fff;
+  font-family: "Lato", sans-serif;
+  font-weight: 400;
+  margin-left: 40px;
+}
+#black_sec .big__black_abs .black_list .casino {
+  margin-left: 25px;
+}
+#black_sec .big__black_abs .black_list .casino p {
+  color: #ffffff;
+  font-family: "Lato", sans-serif;
+  font-size: 2.5rem;
+  font-weight: 300;
+  max-width: 430px;
+}
+#black_sec .big__black_abs .black_list .image_prev {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+#black_sec .big__black_abs .black_list .image_prev .fonts_image {
+  border-left: 1px solid #d22222;
+  margin-left: 15px;
+  padding-left: 15px;
+}
+
+#rememb {
+  background: url(../img/4-layers.png) no-repeat 50% 50%/cover;
+  height: 960px;
+}
+#rememb .rememb_container {
+  width: 90%;
+  max-width: 1520px;
+  margin: 0 auto;
+}
+#rememb .rem_block h2 {
+  font-size: 7.5rem;
+  font-family: "Lato", sans-serif;
+  font-weight: 400;
+}
+
+#quest {
+  height: 960px;
+  background: url(../img/2-layers5.png) no-repeat 50% 50%/cover;
 }
 
 .footer_container {
