--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,9 @@ html {
   font-size: 10px;
   overflow-x: hidden; }
 
+body {
+  overflow-x: hidden; }
+
 .clearfix::after {
   content: "";
   display: table;
@@ -34,7 +37,8 @@ header {
     -webkit-box-pack: justify;
     -ms-flex-pack: justify;
     justify-content: space-between;
-    padding-top: 35px; }
+    padding-top: 35px;
+    margin-bottom: 175px; }
     header .top_line .logo {
       display: block;
       font-family: 'Lato', sans-serif;
@@ -61,10 +65,137 @@ header {
     text-align: center;
     color: #333333;
     font-size: 5rem;
-    font-family: 'Lato', sans-serif;
-    font-weight: 300; }
+    font-family: "LatoLight", sans-serif;
+    margin-bottom: 25px; }
+    header h3 span {
+      font-weight: 900; }
   header h1 {
-    text-align: center; }
+    text-align: center;
+    font-size: 22rem;
+    padding: 0;
+    margin: 0;
+    font-family: 'Lato', sans-serif;
+    font-weight: 900;
+    letter-spacing: -25px;
+    color: #333;
+    line-height: 170px; }
+
+#black_sec {
+  background: url(../img/bg-black.png) no-repeat 50% 50%/cover;
+  padding: 50px 0px;
+  position: relative;
+  padding-bottom: 140px; }
+  #black_sec .container_black {
+    width: 90%;
+    max-width: 1520px;
+    margin: 0 auto; }
+  #black_sec .offer_black {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center; }
+    #black_sec .offer_black .black_img {
+      margin-right: 60px;
+      position: relative;
+      width: 100%;
+      height: 100%; }
+      #black_sec .offer_black .black_img img {
+        margin-top: -85px; }
+    #black_sec .offer_black .black_info {
+      font-size: 2.9rem;
+      color: #fff;
+      font-family: 'Lato', sans-serif;
+      font-weight: 400; }
+      #black_sec .offer_black .black_info p {
+        margin-bottom: 35px;
+        line-height: 35px;
+        width: 435px; }
+        #black_sec .offer_black .black_info p span {
+          color: #d22222; }
+  #black_sec .big__black_abs {
+    padding: 25px 0px;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    -webkit-box-shadow: 0 0 90px 46px rgba(0, 0, 0, 0.35);
+    box-shadow: 0 0 90px 46px rgba(0, 0, 0, 0.35);
+    background: url(../img/bg-black.png) repeat 50% 50%; }
+    #black_sec .big__black_abs .black_list {
+      width: 90%;
+      max-width: 1520px;
+      margin: 0 auto;
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+      justify-content: space-between;
+      -webkit-box-align: center;
+      -ms-flex-align: center;
+      align-items: center; }
+      #black_sec .big__black_abs .black_list .econom_cash {
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-align: center;
+        -ms-flex-align: center;
+        align-items: center; }
+        #black_sec .big__black_abs .black_list .econom_cash:after {
+          content: "";
+          height: 70px;
+          width: 1px;
+          background: #d22222;
+          margin-left: 30px; }
+        #black_sec .big__black_abs .black_list .econom_cash p {
+          font-size: 3.3rem;
+          color: #fff;
+          font-family: 'Lato', sans-serif;
+          font-weight: 400;
+          margin-left: 40px; }
+      #black_sec .big__black_abs .black_list .casino {
+        margin-left: 25px; }
+        #black_sec .big__black_abs .black_list .casino p {
+          color: #ffffff;
+          font-family: 'Lato', sans-serif;
+          font-size: 2.5rem;
+          font-weight: 300;
+          max-width: 430px; }
+      #black_sec .big__black_abs .black_list .image_prev {
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+        justify-content: space-between;
+        -webkit-box-align: center;
+        -ms-flex-align: center;
+        align-items: center; }
+        #black_sec .big__black_abs .black_list .image_prev .fonts_image {
+          border-left: 1px solid #d22222;
+          margin-left: 15px;
+          padding-left: 15px; }
+
+#rememb {
+  background: url(../img/4-layers.png) no-repeat 50% 50%/cover;
+  height: 960px; }
+  #rememb .rememb_container {
+    width: 90%;
+    max-width: 1520px;
+    margin: 0 auto; }
+  #rememb .rem_block h2 {
+    font-size: 7.5rem;
+    font-family: 'Lato', sans-serif;
+    font-weight: 400; }
+
+#quest {
+  height: 960px;
+  background: url(../img/2-layers5.png) no-repeat 50% 50%/cover; }
 
 .footer_container {
   padding-bottom: 20px;
@@ -73,8 +204,6 @@ header {
   max-width: 1550px;
   -ms-flex-pack: distribute;
   justify-content: space-around;
-  -ms-flex-wrap: wrap;
-  flex-wrap: wrap;
   margin: 0 auto;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -121,7 +250,8 @@ header {
     color: #333333;
     font-family: "Lato - Thin";
     font-size: 17px;
-    font-weight: 400; }
+    font-weight: 400;
+    margin: 0px 10px; }
   .footer_container .footer_text1 {
     width: 339px; }
   .footer_container .footer_text2 {
@@ -143,70 +273,69 @@ header {
         font-weight: 400;
         margin-right: 70px; }
 
-.revies {
-  display: none; }
-  .revies .revies_container {
-    position: relative; }
-    .revies .revies_container .revies_text {
-      position: absolute;
+.revies .revies_container {
+  position: relative; }
+  .revies .revies_container .revies_text {
+    position: absolute;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -ms-flex-pack: distribute;
+    justify-content: space-around;
+    padding-left: 100px;
+    width: 800px;
+    top: 0%;
+    left: 0%;
+    height: 100%;
+    z-index: 99999999999;
+    background-image: url(../img/antonsuka2.png);
+    background-repeat: no-repeat;
+    background-position: top right; }
+    .revies .revies_container .revies_text .revies_text_title {
       display: -webkit-box;
       display: -ms-flexbox;
       display: flex;
-      -webkit-box-orient: vertical;
-      -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-      flex-direction: column;
-      -ms-flex-pack: distribute;
-      justify-content: space-around;
-      padding-left: 50px;
-      width: 600px;
-      top: 0%;
-      left: 0%;
-      height: 100%;
-      z-index: 99999999999;
-      background-color: #333333;
-      -webkit-clip-path: polygon(0 0, 35% 0, 100% 100%, 0 100%);
-      clip-path: polygon(0 0, 35% 0, 100% 100%, 0 100%); }
-      .revies .revies_container .revies_text .revies_text_title {
-        display: -webkit-box;
-        display: -ms-flexbox;
-        display: flex;
-        -webkit-box-align: center;
-        -ms-flex-align: center;
-        align-items: center; }
-        .revies .revies_container .revies_text .revies_text_title h2 {
-          color: #ffffff;
-          font-family: "Lato - Black";
-          font-size: 75px;
-          font-weight: 400;
-          position: relative; }
-        .revies .revies_container .revies_text .revies_text_title .red_line {
-          width: 130px;
-          height: 3px;
-          background-color: #d22222;
-          margin-top: 15px;
-          z-index: 9999999999; }
-      .revies .revies_container .revies_text p {
+      -webkit-box-align: center;
+      -ms-flex-align: center;
+      align-items: center; }
+      .revies .revies_container .revies_text .revies_text_title h2 {
         color: #ffffff;
         font-family: "Lato - Black";
-        font-size: 42px;
-        font-weight: 400; }
-    .revies .revies_container .slider {
-      padding: 60px 0;
-      width: 85%;
-      margin-left: auto; }
-      .revies .revies_container .slider .slider_content {
+        font-size: 75px;
+        font-weight: 400;
         position: relative; }
-        .revies .revies_container .slider .slider_content img {
-          width: 728px;
-          height: 541px; }
-        .revies .revies_container .slider .slider_content .slider_content_absolute {
-          position: absolute;
-          top: 0%;
-          left: 0%;
-          height: 100%;
-          width: 100%;
-          background-color: rgba(0, 0, 0, 0.35); }
+      .revies .revies_container .revies_text .revies_text_title .red_line {
+        width: 130px;
+        height: 3px;
+        background-color: #d22222;
+        margin-top: 15px;
+        margin-left: 20px;
+        z-index: 9999999999; }
+    .revies .revies_container .revies_text p {
+      color: #ffffff;
+      font-family: "Lato - Black";
+      font-size: 42px;
+      font-weight: 400; }
+  .revies .revies_container .slider {
+    padding: 60px 0;
+    width: 100%;
+    margin-left: 250px; }
+    .revies .revies_container .slider .slider_content {
+      position: relative; }
+      .revies .revies_container .slider .slider_content img {
+        width: 728px;
+        height: 541px; }
+      .revies .revies_container .slider .slider_content .slider_content_absolute {
+        position: absolute;
+        top: 0%;
+        left: 0%;
+        height: 100%;
+        width: 100%;
+        background-color: rgba(0, 0, 0, 0.35); }
 
 .slick-active .slider_content .slider_content_absolute {
   display: none; }
@@ -306,6 +435,105 @@ header {
         background-color: #ff0000;
         color: #ffffff; }
 
-@media all and (max-width: 1400px) {
-  body {
-    display: none; } }
+@media all and (max-width: 1480px) {
+  footer .footer_container .footer_logo h2 {
+    font-size: 50px; }
+  footer .footer_container .footer_text {
+    width: 250px; }
+  .revies .revies_container .revies_text {
+    width: 600px;
+    padding-left: 50px;
+    background-size: 100% 100%; }
+  .revies .revies_container .slider {
+    margin-left: 200px; } }
+
+@media all and (max-width: 1250px) {
+  .revies .revies_container .revies_text {
+    width: 500px;
+    background-size: 100% 100%; }
+    .revies .revies_container .revies_text .revies_text_title h2 {
+      font-size: 50px; }
+    .revies .revies_container .revies_text p {
+      font-size: 30px; }
+  .revies .revies_container .slider {
+    width: 100%;
+    margin-left: 100px; }
+    .revies .revies_container .slider .slider_content img {
+      width: 500px;
+      height: auto; }
+  .slick-slide {
+    margin: 0 20px; } }
+
+@media all and (max-width: 1150px) {
+  .revies {
+    padding-top: 200px;
+    position: relative; }
+    .revies .revies_container {
+      position: static; }
+      .revies .revies_container .revies_text {
+        width: 100%;
+        -webkit-box-pack: start;
+        -ms-flex-pack: start;
+        justify-content: flex-start; }
+        .revies .revies_container .revies_text .revies_text_title h2 {
+          margin-top: 50px;
+          margin-bottom: 50px; }
+      .revies .revies_container .slider {
+        z-index: 999999999999999999;
+        margin: 0; } }
+
+@media all and (max-width: 1000px) {
+  footer .footer_container {
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap; }
+    footer .footer_container .footer_logo {
+      width: 45%;
+      margin: 0;
+      margin-bottom: 40px; }
+    footer .footer_container .footer_text {
+      width: 45%;
+      margin: 0;
+      margin-bottom: 40px; } }
+
+@media all and (max-width: 700px) {
+  .feedback .feedback_container h2 {
+    font-size: 60px;
+    margin-bottom: 35px; }
+  .feedback .feedback_container p {
+    font-size: 27px;
+    margin-bottom: 55px; }
+  .feedback .feedback_container .feedback_form label {
+    font-size: 27px;
+    margin-bottom: 15px; }
+  .feedback .feedback_container .feedback_form input {
+    width: 90%;
+    margin-bottom: 40px; }
+  .feedback .feedback_container .feedback_form .choose_sex .sex {
+    margin-bottom: 40px;
+    margin-left: 0;
+    margin-right: 5px; }
+  .feedback .feedback_container .feedback_form input[type=submit] {
+    width: 65%;
+    font-size: 27px; }
+  .running_line .running_line_container .ticker #webTicker li {
+    font-size: 30px; }
+  .revies .revies_container .revies_text {
+    width: 100%; }
+    .revies .revies_container .revies_text .revies_text_title h2 {
+      font-size: 40px; }
+    .revies .revies_container .revies_text p {
+      font-size: 22px; }
+  .revies .revies_container .slider .slider_content img {
+    width: 320px;
+    height: auto; } }
+
+@media all and (max-width: 500px) {
+  footer .footer_container .footer_logo {
+    width: 100%; }
+  footer .footer_container .footer_text {
+    width: 100%; }
+  .revies .revies_container .revies_text {
+    padding-left: 10px;
+    width: 150%; }
+  .slick-slide {
+    margin: 0 10px; } }
