--- a/sass/style.sass
+++ b/sass/style.sass
@@ -406,6 +406,11 @@ header
 				.sex:hover
 					background-color: #ff0000
 					color: #ffffff
+@media (max-width: 3000px) and (min-width:1480px)
+	.revies
+		.revies_container
+			.revies_text
+				background-size: 100%
 @media all and (max-width:1480px)
 	footer
 		.footer_container
