--- a/css/style.css
+++ b/css/style.css
@@ -435,6 +435,10 @@ header {
         background-color: #ff0000;
         color: #ffffff; }
 
+@media (max-width: 3000px) and (min-width: 1480px) {
+  .revies .revies_container .revies_text {
+    background-size: 100%; } }
+
 @media all and (max-width: 1480px) {
   footer .footer_container .footer_logo h2 {
     font-size: 50px; }
