--- a/sass/style.sass
+++ b/sass/style.sass
@@ -473,6 +473,8 @@ header
 .feedback
 	background-image: url(../img/casino.png)
 	background-position: 7% 0%
+	padding-top: 70px
+	box-shadow: 0 0 90px 46px rgba(0, 0, 0, 0.35)
 	.feedback_container
 		width: 90%
 		max-width: 1520px
